# pathdns

./: Cargo.toml  INTEGRATION.md  README.md
.github/workflows/: build-jemalloc-test.yml  ci.yml  cleanup-runs.yml  release-aarch64.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dns_wire.rs  fuzz_mrs_domain.rs  fuzz_mrs_ipcidr.rs  parse_geosite.rs
src/: answer_map.rs  cache.rs  config.rs  config_file.rs  config_json.rs  domain.rs  filters.rs  geosite.rs  hasher.rs  iprange.rs  lib.rs  listener.rs  log.rs  main.rs  metrics.rs  mrs.rs  persist.rs  pipeline.rs  resolver.rs  response_filter.rs  route_index.rs  route_table.rs  router.rs  routing_index.rs  ruleset.rs  server.rs  singleflight.rs  stats.rs  sys.rs  udp_batch.rs  udp_send.rs  udp_uring.rs  verdict_cache.rs
src/config/: bootstrap.rs  fingerprint.rs  json.rs  mod.rs  parse.rs  upstream_url.rs
src/config/tests/: config.rs
src/dns/: builder.rs  ecs.rs  mod.rs  query.rs  scan.rs  ttl.rs
src/dns/tests/: builder.rs  dns.rs  query.rs  ttl.rs
src/ipset/: client.rs  codec.rs  config.rs  mod.rs  socket.rs  worker.rs
src/ipset/tests/: codec.rs  config.rs  ipset.rs
src/querylog/: api.rs  mod.rs  page.html  ring.rs  worker.rs
src/querylog/tests/: api.rs  querylog.rs  ring.rs  worker.rs
src/tests/: answer_map.rs  cache.rs  domain.rs  geosite.rs  resolver.rs  route_index.rs  sys.rs  udp_send.rs  udp_uring.rs  verdict_cache.rs
src/upstream/: doh.rs  inflight.rs  mod.rs  quic.rs  tcp_mux.rs  udp.rs
src/upstream/tests/: inflight.rs  tcp_mux.rs  udp.rs  upstream.rs
testing/: .gitignore  README.md  cfg_match.json  dnslib.py  fastmock.py  geosite_match.json  loadgen.py  mock2.py  mock_upstream.py  richmock.py  ruleset_ads.list  ruleset_apple.mrs  ruleset_cn.list  ruleset_gfw.list  slowmock.py  sniff.py  test_client.py  test_edge.py  test_inflight_cap.py  test_match.py
testing/benchmark/: .gitignore  README.md  benchmock.py  loadbench.rs  mosdns.yaml  mosdns_cache.yaml  orchestrator.py  pathdns.json  pathdns_cache.json  rustmock.rs  smartdns.conf  smartdns_cache.conf  unbound.conf  unbound_cache.conf
