[package]
name = "pathdns"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
jemalloc = ["dep:tikv-jemallocator"]
# DNS-over-QUIC (RFC 9250); adds the quinn QUIC library (~600 kB on amd64 musl).
doq = ["dep:quinn"]
# HTTP/3 DoH; requires doq and adds the h3 and h3-quinn crates.
h3 = ["doq", "dep:h3", "dep:h3-quinn", "dep:http"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util"] }
anyhow = "1"
bytes = "1"
libc = "0.2"
moka = { version = "0.12.12", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
notify = "6"
dashmap = "5"
rustc-hash = "2"
smallvec = "1"
arc-swap = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"] }
webpki-roots = "0.26"
tikv-jemallocator = { version = "0.6", optional = true }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls"], optional = true }
h3 = { version = "0.0", optional = true }
h3-quinn = { version = "0.0", optional = true }
http = { version = "1", optional = true }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
